force-app/main/default/objects/Quote__c/fields/Quote_Trailer_Allowance_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Quote_Trailer_Allowance_Calculated__c</fullName>
    <formula>IF(Quote_Trailer_ACV__c &lt; Quote_Trailer_Allowance__c,Quote_Trailer_Allowance__c- Quote_Trailer_ACV__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Trailer Trade Over Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>