force-app/main/default/objects/Quote__c/fields/Quote_Trailer_Reg_Fee_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Quote_Trailer_Reg_Fee_Negotiation__c</fullName>
    <label>Quote Trailer Reg Fee Negotiation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>