force-app/main/default/objects/Quote__c/fields/Quote_Trailer_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Quote_Trailer_Sales_Tax__c</fullName>
    <label>Quote Trailer Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>