force-app/main/default/objects/Quote__c/fields/Quote_Your_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Quote_Your_Price_Formula__c</fullName>
    <description>Formula Field</description>
    <formula>IF(Instant_Quote__c,
   Our_Instant_Quote_Price__c,
   IF(
	(Total_Price_Quote__c + Quote_MSRP_Trailer_Price__c) &gt; Discount_On_Quote__c,
	(Total_Price_Quote__c + Quote_MSRP_Trailer_Price__c) -  Discount_On_Quote__c,
	(Total_Price_Quote__c + Quote_MSRP_Trailer_Price__c)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Your Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>