force-app/main/default/objects/Quote__c/fields/QuoteHiddenBox__c.field-meta.xml
<CustomField>
    <fullName>QuoteHiddenBox__c</fullName>
    <label>QuoteHiddenBox</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>