force-app/main/default/objects/Quote__c/fields/Related_To_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with standard opportunity</description>
    <label>Related To Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>