force-app/main/default/objects/Quote__c/fields/Related_to_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship with the custom Order object</description>
    <label>Related to Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>