force-app/main/default/objects/Quote__c/fields/Related_to_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specifies the related Product of the Item in Quote</inlineHelpText>
    <label>Related to Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>