force-app/main/default/objects/Quote__c/fields/Rigging_Cost__c.field-meta.xml
<CustomField>
    <fullName>Rigging_Cost__c</fullName>
    <formula>Test_2__r.Rigging_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rigging Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>