force-app/main/default/objects/Quote__c/fields/Sales_Tax_City__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_City__c</fullName>
    <label>Sales Tax City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>