force-app/main/default/objects/Quote__c/fields/Sales_Tax_County__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_County__c</fullName>
    <label>Sales Tax County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>