force-app/main/default/objects/Quote__c/fields/Shipping_And_Handling__c.field-meta.xml
<CustomField>
    <fullName>Shipping_And_Handling__c</fullName>
    <label>Shipping And Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>