force-app/main/default/objects/Quote__c/fields/Show_MSRP_Option_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Show_MSRP_Option_Pricing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show MSRP Option Pricing</label>
    <type>Checkbox</type>
</CustomField>