force-app/main/default/objects/Quote__c/fields/Starboard_Engine_SN__c.field-meta.xml
<CustomField>
    <fullName>Starboard_Engine_SN__c</fullName>
    <label>Starboard Engine SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>