force-app/main/default/objects/Quote__c/fields/Test_2__c.field-meta.xml
<CustomField>
    <fullName>Test_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>