force-app/main/default/objects/Quote__c/fields/Total_Price_Quote__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Quote__c</fullName>
    <inlineHelpText>Includes the Price of the Product and the options selected for the Product.</inlineHelpText>
    <label>MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>