force-app/main/default/objects/Quote__c/fields/Trailer__c.field-meta.xml
<CustomField>
    <fullName>Trailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trailer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select an inventory of Trailer type.</errorMessage>
        <filterItems>
            <field>Inventory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Trailer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Trailer</relationshipLabel>
    <relationshipName>Quote1</relationshipName>
    <type>Lookup</type>
</CustomField>