force-app/main/default/objects/Quote__c/fields/Trailer_Dealer_Price__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Dealer_Price__c</fullName>
    <formula>Trailer__r.Total_Dealer_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trailer Dealer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>