force-app/main/default/objects/Quote__c/fields/Transmission_Gearbox_SN__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Gearbox_SN__c</fullName>
    <inlineHelpText>Contains the mapping of Transmission/Gearbox Number of the product involved in Quote.</inlineHelpText>
    <label>Transmission/Gearbox SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>