force-app/main/default/objects/Quote__c/fields/Trolling_Motor__c.field-meta.xml
<CustomField>
    <fullName>Trolling_Motor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trolling Motor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Trolling Motor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Quote (Trolling Motor)</relationshipLabel>
    <relationshipName>Trolling_Motor</relationshipName>
    <type>Lookup</type>
</CustomField>