force-app/main/default/objects/Quote__c/fields/Tyre_Tax__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Tax__c</fullName>
    <label>Tire Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>