force-app/main/default/objects/Quote__c/recordTypes/Dealer_Quote.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Quote</fullName>
    <active>true</active>
    <label>Dealer Quote</label>
</RecordType>