force-app/main/default/objects/Quote__c/validationRules/Sold_By_required_for_Final_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Sold_By_required_for_Final_Quote</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c ,&apos;Final&apos;),
 ISBLANK( TEXT(Boat_Sold_By__c) )
)</errorConditionFormula>
    <errorMessage>Boat Sold by is Required for Final Quote</errorMessage>
</ValidationRule>