force-app/main/default/objects/Quote__c/validationRules/Valid_Quote_Rate_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Quote_Rate_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Quote_Rate__c &gt;100</errorConditionFormula>
    <errorDisplayField>Quote_Rate__c</errorDisplayField>
    <errorMessage>Quote Rate cannot exceed 100%</errorMessage>
</ValidationRule>